@@ -1,3 +1,14 @@
+2011-08-18  Jakub Jelinek  <jakub@redhat.com>
+
+	* g++.dg/plugin/decl_plugin.c: Include diagnostic.h.
+
+2011-08-11  Romain Geissler  <romain.geissler@gmail.com>
+            Brian Hackett  <bhackett1024@gmail.com>
+
+	* g++.dg/plugin/decl_plugin.c: New.
+	* g++.dg/plugin/decl-plugin-test.C: New.
+	* g++.dg/plugin/plugin.exp: Add above testcase.
+
 2012-02-11  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/52132
